Fixed syntax errors

--- a/product-page.html
+++ b/product-page.html
@@ -12,13 +12,13 @@
       <div class="navbar" id="mynavbar">
           <div>
             <a href="index.html">  
-            <img id="sitelogo" src="images/site-logo.png" height="50px" />
+            <img id="sitelogo" src="images/site-logo.png" height=50 />
             </a>
           </div>
-            <a href="shop.html">Shop</a><
+            <a href="shop.html">Shop</a>
             <a href="contact.asp">Sale</a>
             <a href="about.asp">About</a> 
-            <img src="images/store-icons.png" height="35px"/>  
+            <img src="images/store-icons.png" height=35 alt="store icons"/>  
           </div>
     <section class="section2">
       <div class="container">
@@ -28,7 +28,7 @@
       </div>
       <div class="product-customize">
         <h4>SELECT COLOR</h4>
-        <img src="images/color-selections.jpg" width="100%">
+        <img src="images/color-selections.jpg" width="100%" alt="colors">
         <h4>SELECT FILLING</h4>
         <div class="select">
         <select name="filling" id="filling">
@@ -47,7 +47,7 @@
       <div class="container">
           <div class="item-c">
               <h2>The perfect centerpiece to any space.</h2>
-              <p>- Hand-knitted from thick and soft hand-dyed cotton yarn</br>
+              <p>- Hand-knitted from thick and soft hand-dyed cotton yarn<br>
 
                   - Made in our artisan workshop out of Pittsburgh, PA. </p>
             </div>
@@ -55,7 +55,7 @@
     </section>
     <div class="footer">
         <div class="footer-1">
-          <img src="images/site-logo-footer.png" height="80%" />
+          <img src="images/site-logo-footer.png" height=80% />
         </div>
         <div class="footer-2">
           <b class="p-white">PAGES</b>
@@ -79,9 +79,9 @@
           </p>
         </div>
         <div class="footer-4">
-          <h3 style="color: white;">Hear it First</h>
+          <h3 style="color: white;">Hear it First</h3>
     <p></p>
-          <input type="text"></input>
+          <input type="text"/>
           <div class="button">
               <a href="shop.html" class="subscribe">SUBSCRIBE</a>
               </div>
