new class for active links

--- a/shop.html
+++ b/shop.html
@@ -19,7 +19,7 @@
         />
       </a>
     </div>
-    <a href="shop.html">Shop</a>
+    <a class="active" href="shop.html">Shop</a>
     <a href="contact.asp">Sale</a>
     <a href="about.asp">About</a>
     <img src="images/store-icons.png" height="35" alt="store icons" />
