product page customization

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
           <img id="sitelogo" src="images/site-logo.png" height="50px" />
         </a>
       </div>
+      <! STICKY NAV !>
       <a href="shop.html">Shop</a>
       <a href="contact.asp">Sale</a>
       <a href="about.asp">About</a>
       <img src="images/store-icons.png" height="35px" />
+      <h4 id="cartitems">0</h4>
     </div>
 
     <section class="section1">
@@ -93,4 +95,5 @@
       </div>
     </div>
   </div>
+  <script type="text/javascript" src="js/script.js"></script>
 </html>
