--- a/shop.html
+++ b/shop.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>PUI Website</title>
+    <script type="text/javascript" src="js/script.js"></script>
   </head>
-
+  <! STICKY NAV !>
   <div class="navbar" id="mynavbar">
     <div>
       <a href="index.html">
@@ -23,6 +24,7 @@
     <a href="contact.asp">Sale</a>
     <a href="about.asp">About</a>
     <img src="images/store-icons.png" height="35" alt="store icons" />
+    <h4 id="cartitems">0</h4>
   </div>
   <h1 class="shop-label">Shop</h1>
   <section class="shop-head">
@@ -135,4 +137,5 @@
       </div>
     </div>
   </div>
+  <script type="text/javascript" src="js/script.js"></script>
 </html>
