added cart page

--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
   </head>
 
   <body>
+    <! STICKY NAV !>
     <div class="navbar" id="mynavbar">
       <div>
         <a href="index.html">
           <img id="sitelogo" src="images/site-logo.png" height="50px" />
         </a>
       </div>
-      <! STICKY NAV !>
       <a href="shop.html">Shop</a>
       <a href="contact.asp">Sale</a>
       <a href="about.asp">About</a>
-      <img src="images/store-icons.png" height="35px" />
-      <h4 id="cartitems">0</h4>
+      <a id="nav-rightside" href="cart.html">
+        <img src="images/store-icons.png" height="35px" />
+
+        <h4 id="cartitems">0</h4>
+      </a>
     </div>
 
     <section class="section1">
