--- a/product-page.html
+++ b/product-page.html
@@ -7,21 +7,24 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>PUI Website</title>
   </head>
-  <! STICKY NAV !>
   <body>
     
+      <! STICKY NAV !>
       <div class="navbar" id="mynavbar">
-          <div>
-            <a href="index.html">  
-            <img id="sitelogo" src="images/site-logo.png" height=50 />
-            </a>
-          </div>
-            <a href="shop.html">Shop</a>
-            <a href="contact.asp">Sale</a>
-            <a href="about.asp">About</a> 
-            <img src="images/store-icons.png" height=35 alt="store icons"/> 
-            <h4 id="cartitems">0</h4>
-          </div>
+        <div>
+          <a href="index.html">
+            <img id="sitelogo" src="images/site-logo.png" height="50px" />
+          </a>
+        </div>
+        <a href="shop.html">Shop</a>
+        <a href="contact.asp">Sale</a>
+        <a href="about.asp">About</a>
+        <a id="nav-rightside" href="cart.html">
+          <img src="images/store-icons.png" height="35px" />
+  
+          <h4 id="cartitems">0</h4>
+        </a>
+      </div>
           
     <section id="floor-pouf" class="section2">
         <div id="popup">
