--- a/shop.html
+++ b/shop.html
@@ -12,19 +12,17 @@
   <div class="navbar" id="mynavbar">
     <div>
       <a href="index.html">
-        <img
-          id="sitelogo"
-          src="images/site-logo.png"
-          height="50"
-          alt="site logo"
-        />
+        <img id="sitelogo" src="images/site-logo.png" height="50px" />
       </a>
     </div>
-    <a class="active" href="shop.html">Shop</a>
+    <a href="shop.html">Shop</a>
     <a href="contact.asp">Sale</a>
     <a href="about.asp">About</a>
-    <img src="images/store-icons.png" height="35" alt="store icons" />
-    <h4 id="cartitems">0</h4>
+    <a id="nav-rightside" href="cart.html">
+      <img src="images/store-icons.png" height="35px" />
+
+      <h4 id="cartitems">0</h4>
+    </a>
   </div>
   <h1 class="shop-label">Shop</h1>
   <section class="shop-head">
