checking commit issues

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <h3 style="color: white;">Hear it First</h3>
       <input type="text" />
       <div class="button">
-        <a href="shop.html" class="subscribe">SUBSCRIBE</a>
+        <a href="shop.html" class="subscribe">SUBSCRIBE.</a>
       </div>
     </div>
   </div>
