--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>PUI Website</title>
+    <script src="js/script.js" async></script>
   </head>
 
   <body>
@@ -98,5 +99,4 @@
       </div>
     </div>
   </div>
-  <script type="text/javascript" src="js/script.js"></script>
 </html>
