--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>PUI Website</title>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script src="js/script.js" async></script>
   </head>
   <! STICKY NAV !>
   <div class="navbar" id="mynavbar">
@@ -135,5 +135,4 @@
       </div>
     </div>
   </div>
-  <script type="text/javascript" src="js/script.js"></script>
 </html>
