fixed onload bug

--- a/cart.html
+++ b/cart.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head >
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -71,9 +71,9 @@
        min="1" max="100" value="1">
           </div>
 
-          <div class="cart-item-total">
+          <div class="cart-item-total-parent">
 
-            <p>$20.99</p>
+            <p class="cart-item-total">$20.99</p>
             <button class="remove-item">Remove Item</button>
           </div>
       </div>  
@@ -105,9 +105,9 @@
             
             </div>
   
-            <div class="cart-item-total">
+            <div class="cart-item-total-parent">
   
-              <p>$45.99</p>
+              <p class="cart-item-total">$45.99</p>
               <button class="remove-item">Remove Item</button>
             </div>
         </div> 
