--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="js/script.js" async></script>
   </head>
 
-  <body>
+  <body onload="onLoad()">
     <! STICKY NAV !>
     <div class="navbar" id="mynavbar">
       <div>
