removing items from cart now removes it from local storage.

--- a/cart.html
+++ b/cart.html
@@ -43,7 +43,7 @@
      </div>
 
 <div class="container-cart-parent" >
-           <div class="container-cart">
+           <!-- <div class="container-cart">
         <div class="cart-item">
           <img src="shop-items/floor-pouf.jpg" width=100% />
       </div>
@@ -110,7 +110,7 @@
               <p class="cart-item-total">$45.99</p>
               <button class="remove-item">Remove Item</button>
             </div>
-        </div> 
+        </div>  -->
 </div>
 
         <div class="container-cart-details">
