fixed read() issues

--- a/product-page.html
+++ b/product-page.html
@@ -67,9 +67,9 @@
             <option value="mercedes">Hypor Allergenic Polyblend</option>
           </select>
         </div>
-        <!-- <div class="select">
-        <h4>QUANTITY</h4>
-        <input type="number" class="item-quantity" name="item-quantity"
+        <!-- <h4>QUANTITY</h4>
+        <div class="select">
+        <input type="number" class="select-item-quantity" name="item-quantity"
         min="1" max="100" value="1">
         </div> -->
         <div class="select">
