user can now change quantity when adding to cart.

--- a/product-page.html
+++ b/product-page.html
@@ -67,11 +67,11 @@
             <option value="mercedes">Hypor Allergenic Polyblend</option>
           </select>
         </div>
-        <!-- <h4>QUANTITY</h4>
+        <h4>QUANTITY</h4>
         <div class="select">
         <input type="number" class="select-item-quantity" name="item-quantity"
         min="1" max="100" value="1">
-        </div> -->
+        </div>
         <div class="select">
         <a class=add-to-cart href="#" class="button">ADD TO CART</a>
         </div>
